--- a/css/main.css
+++ b/css/main.css
@@ -583,13 +583,18 @@ figure.effect-layla:hover img,figure.effect-layla a {
 
 #aboutme{
     margin-top: 50px;
+   
     padding: 0;
+    margin-bottom: 200px;
 }
 
 
 
 
-
+#client{
+  margin: 100px 0px;
+  padding-top: 150px;
+}
 
 
 #map-canvas {
@@ -672,4 +677,20 @@ section{
 .width{
   width: 70px;
   color: #000;
+}
+
+.social-link .fa{
+  color: black;
+  font-size: 20px;
+  padding: 20px;
+}
+#portfolio{
+   padding-top: 150px;
+}
+#contact{
+  padding-top: 150px;
+}
+.portfolio > h2{
+  border-bottom: 2px solid;
+  margin-bottom: 50px;
 }
